[project]
name = "opengym-reinforcementlearning"
version = "0.1.0"
description = ""
authors = [
    {name = "HowardKuo2025",email = "howard.futurenest@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "gymnasium[classic-control] (>=1.2.3,<2.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "moviepy (>=2.2.1,<3.0.0)",
    "gym (>=0.26.2,<0.27.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
